k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amrutam-api
  labels:
    app: amrutam-api
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: amrutam-api
